YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'false'", "'true'", 
                     "'self'", "'SELF_TYPE'", "'Bool'", "'Int'", "'String'", 
                     "'void'", "';'", "':'", "'{'", "'}'", "'['", "']'", 
                     "'('", "')'", "','", "'\"'", "'''", "'+'", "'-'", "'*'", 
                     "'/'", "'~'", "'<'", "'<='", "'='", "'.'", "'@'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", 
                      "ISVOID", "LOOP", "POOL", "THEN", "WHILE", "NEW", 
                      "NOT", "LET", "FALSE", "TRUE", "SELF", "SELF_TYPE", 
                      "BOOL", "INT", "STRING", "VOID", "SEMICOLON", "COLON", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPAR", 
                      "RPAR", "COMMA", "QUOTES", "APOSTROPHE", "ADD", "SUB", 
                      "MULTIPLY", "DIVIDE", "NEGATION", "LESS_OP", "LESS_EQ_OP", 
                      "EQUAL_OP", "DOT", "AT", "ASIGN", "TYPE_ID", "OBJ_ID", 
                      "ALPHA", "INTEGER", "DIGIT", "CAP", "ALPHA_NUM", "STRING_LIT", 
                      "BOOL_LIT", "COMMENT", "OTHER_COMMENT", "NEWLINE", 
                      "WHITESPACE", "ERR_TOKEN" ]

    RULE_program = 0
    RULE_class = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_var_type = 5
    RULE_var_id = 6

    ruleNames =  [ "program", "class", "feature", "formal", "expr", "var_type", 
                   "var_id" ]

    EOF = Token.EOF
    CLASS=1
    ELSE=2
    FI=3
    IF=4
    IN=5
    INHERITS=6
    ISVOID=7
    LOOP=8
    POOL=9
    THEN=10
    WHILE=11
    NEW=12
    NOT=13
    LET=14
    FALSE=15
    TRUE=16
    SELF=17
    SELF_TYPE=18
    BOOL=19
    INT=20
    STRING=21
    VOID=22
    SEMICOLON=23
    COLON=24
    LBRACE=25
    RBRACE=26
    LBRACKET=27
    RBRACKET=28
    LPAR=29
    RPAR=30
    COMMA=31
    QUOTES=32
    APOSTROPHE=33
    ADD=34
    SUB=35
    MULTIPLY=36
    DIVIDE=37
    NEGATION=38
    LESS_OP=39
    LESS_EQ_OP=40
    EQUAL_OP=41
    DOT=42
    AT=43
    ASIGN=44
    TYPE_ID=45
    OBJ_ID=46
    ALPHA=47
    INTEGER=48
    DIGIT=49
    CAP=50
    ALPHA_NUM=51
    STRING_LIT=52
    BOOL_LIT=53
    COMMENT=54
    OTHER_COMMENT=55
    NEWLINE=56
    WHITESPACE=57
    ERR_TOKEN=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ClassContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ClassContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.class_()
                self.state = 15
                self.match(YAPLParser.SEMICOLON)
                self.state = 19 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==YAPLParser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_typeContext,i)


        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def getRuleIndex(self):
            return YAPLParser.RULE_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass" ):
                listener.enterClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass" ):
                listener.exitClass(self)




    def class_(self):

        localctx = YAPLParser.ClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(YAPLParser.CLASS)
            self.state = 22
            self.var_type()
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPLParser.INHERITS:
                self.state = 23
                self.match(YAPLParser.INHERITS)
                self.state = 24
                self.var_type()


            self.state = 27
            self.match(YAPLParser.LBRACE)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPLParser.SELF or _la==YAPLParser.OBJ_ID:
                self.state = 28
                self.feature()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(YAPLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(YAPLParser.Var_idContext,0)


        def LPAR(self):
            return self.getToken(YAPLParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(YAPLParser.RPAR, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(YAPLParser.Var_typeContext,0)


        def LBRACE(self):
            return self.getToken(YAPLParser.LBRACE, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def RBRACE(self):
            return self.getToken(YAPLParser.RBRACE, 0)

        def SEMICOLON(self):
            return self.getToken(YAPLParser.SEMICOLON, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def ASIGN(self):
            return self.getToken(YAPLParser.ASIGN, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.var_id()
                self.state = 37
                self.match(YAPLParser.LPAR)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.SELF or _la==YAPLParser.OBJ_ID:
                    self.state = 38
                    self.formal()
                    self.state = 43
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.COMMA:
                        self.state = 39
                        self.match(YAPLParser.COMMA)
                        self.state = 40
                        self.formal()
                        self.state = 45
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 48
                self.match(YAPLParser.RPAR)
                self.state = 49
                self.match(YAPLParser.COLON)
                self.state = 50
                self.var_type()
                self.state = 51
                self.match(YAPLParser.LBRACE)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(YAPLParser.RBRACE)
                self.state = 54
                self.match(YAPLParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.var_id()
                self.state = 57
                self.match(YAPLParser.COLON)
                self.state = 58
                self.var_type()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASIGN:
                    self.state = 59
                    self.match(YAPLParser.ASIGN)
                    self.state = 60
                    self.expr(0)


                self.state = 63
                self.match(YAPLParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(YAPLParser.Var_idContext,0)


        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(YAPLParser.Var_typeContext,0)


        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.var_id()
            self.state = 68
            self.match(YAPLParser.COLON)
            self.state = 69
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_idContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_idContext,i)


        def ASIGN(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ASIGN)
            else:
                return self.getToken(YAPLParser.ASIGN, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.LPAR)
            else:
                return self.getToken(YAPLParser.LPAR, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def IF(self):
            return self.getToken(YAPLParser.IF, 0)

        def THEN(self):
            return self.getToken(YAPLParser.THEN, 0)

        def ELSE(self):
            return self.getToken(YAPLParser.ELSE, 0)

        def FI(self):
            return self.getToken(YAPLParser.FI, 0)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YAPLParser.LOOP, 0)

        def POOL(self):
            return self.getToken(YAPLParser.POOL, 0)

        def LBRACKET(self):
            return self.getToken(YAPLParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(YAPLParser.RBRACKET, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def LET(self):
            return self.getToken(YAPLParser.LET, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COLON)
            else:
                return self.getToken(YAPLParser.COLON, i)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(YAPLParser.Var_typeContext,i)


        def IN(self):
            return self.getToken(YAPLParser.IN, 0)

        def NEW(self):
            return self.getToken(YAPLParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(YAPLParser.ISVOID, 0)

        def NEGATION(self):
            return self.getToken(YAPLParser.NEGATION, 0)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def RPAR(self):
            return self.getToken(YAPLParser.RPAR, 0)

        def INTEGER(self):
            return self.getToken(YAPLParser.INTEGER, 0)

        def STRING_LIT(self):
            return self.getToken(YAPLParser.STRING_LIT, 0)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def ADD(self):
            return self.getToken(YAPLParser.ADD, 0)

        def SUB(self):
            return self.getToken(YAPLParser.SUB, 0)

        def MULTIPLY(self):
            return self.getToken(YAPLParser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(YAPLParser.DIVIDE, 0)

        def LESS_OP(self):
            return self.getToken(YAPLParser.LESS_OP, 0)

        def LESS_EQ_OP(self):
            return self.getToken(YAPLParser.LESS_EQ_OP, 0)

        def EQUAL_OP(self):
            return self.getToken(YAPLParser.EQUAL_OP, 0)

        def DOT(self):
            return self.getToken(YAPLParser.DOT, 0)

        def AT(self):
            return self.getToken(YAPLParser.AT, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 72
                self.var_id()
                self.state = 73
                self.match(YAPLParser.ASIGN)
                self.state = 74
                self.expr(24)
                pass

            elif la_ == 2:
                self.state = 76
                self.var_id()
                self.state = 77
                self.match(YAPLParser.LPAR)
                self.state = 86
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 78
                    self.expr(0)
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.COMMA:
                        self.state = 79
                        self.match(YAPLParser.COMMA)
                        self.state = 80
                        self.expr(0)
                        self.state = 85
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 88
                self.match(YAPLParser.LPAR)
                pass

            elif la_ == 3:
                self.state = 90
                self.match(YAPLParser.IF)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(YAPLParser.THEN)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(YAPLParser.ELSE)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(YAPLParser.FI)
                pass

            elif la_ == 4:
                self.state = 98
                self.match(YAPLParser.WHILE)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(YAPLParser.LOOP)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(YAPLParser.POOL)
                pass

            elif la_ == 5:
                self.state = 104
                self.match(YAPLParser.LBRACKET)
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 105
                    self.expr(0)
                    self.state = 106
                    self.match(YAPLParser.SEMICOLON)
                    self.state = 110 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.IF) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.LET) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.SELF) | (1 << YAPLParser.LBRACKET) | (1 << YAPLParser.LPAR) | (1 << YAPLParser.NEGATION) | (1 << YAPLParser.OBJ_ID) | (1 << YAPLParser.INTEGER) | (1 << YAPLParser.STRING_LIT))) != 0)):
                        break

                self.state = 112
                self.match(YAPLParser.RBRACKET)
                pass

            elif la_ == 6:
                self.state = 114
                self.match(YAPLParser.LET)
                self.state = 115
                self.var_id()
                self.state = 116
                self.match(YAPLParser.COLON)
                self.state = 117
                self.var_type()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASIGN:
                    self.state = 118
                    self.match(YAPLParser.ASIGN)
                    self.state = 119
                    self.expr(0)


                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==YAPLParser.COMMA:
                    self.state = 122
                    self.match(YAPLParser.COMMA)
                    self.state = 123
                    self.var_id()
                    self.state = 124
                    self.match(YAPLParser.COLON)
                    self.state = 125
                    self.var_type()
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==YAPLParser.ASIGN:
                        self.state = 126
                        self.match(YAPLParser.ASIGN)
                        self.state = 127
                        self.expr(0)


                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 135
                self.match(YAPLParser.IN)
                self.state = 136
                self.expr(18)
                pass

            elif la_ == 7:
                self.state = 138
                self.match(YAPLParser.NEW)
                self.state = 139
                self.var_type()
                pass

            elif la_ == 8:
                self.state = 140
                self.match(YAPLParser.ISVOID)
                self.state = 141
                self.expr(16)
                pass

            elif la_ == 9:
                self.state = 142
                self.match(YAPLParser.NEGATION)
                self.state = 143
                self.expr(11)
                pass

            elif la_ == 10:
                self.state = 144
                self.match(YAPLParser.NOT)
                self.state = 145
                self.expr(7)
                pass

            elif la_ == 11:
                self.state = 146
                self.match(YAPLParser.LPAR)
                self.state = 147
                self.expr(0)
                self.state = 148
                self.match(YAPLParser.RPAR)
                pass

            elif la_ == 12:
                self.state = 150
                self.var_id()
                pass

            elif la_ == 13:
                self.state = 151
                self.match(YAPLParser.INTEGER)
                pass

            elif la_ == 14:
                self.state = 152
                self.match(YAPLParser.STRING_LIT)
                pass

            elif la_ == 15:
                self.state = 153
                self.match(YAPLParser.TRUE)
                pass

            elif la_ == 16:
                self.state = 154
                self.match(YAPLParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 200
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 198
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                    if la_ == 1:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 157
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 158
                        self.match(YAPLParser.ADD)
                        self.state = 159
                        self.expr(16)
                        pass

                    elif la_ == 2:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 160
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 161
                        self.match(YAPLParser.SUB)
                        self.state = 162
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 163
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 164
                        self.match(YAPLParser.MULTIPLY)
                        self.state = 165
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 166
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 167
                        self.match(YAPLParser.DIVIDE)
                        self.state = 168
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 169
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 170
                        self.match(YAPLParser.LESS_OP)
                        self.state = 171
                        self.expr(11)
                        pass

                    elif la_ == 6:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 172
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 173
                        self.match(YAPLParser.LESS_EQ_OP)
                        self.state = 174
                        self.expr(10)
                        pass

                    elif la_ == 7:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 175
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 176
                        self.match(YAPLParser.EQUAL_OP)
                        self.state = 177
                        self.expr(9)
                        pass

                    elif la_ == 8:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 178
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 181
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==YAPLParser.AT:
                            self.state = 179
                            self.match(YAPLParser.AT)
                            self.state = 180
                            self.var_type()


                        self.state = 183
                        self.match(YAPLParser.DOT)
                        self.state = 184
                        self.var_id()
                        self.state = 185
                        self.match(YAPLParser.LPAR)
                        self.state = 194
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.IF) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.LET) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.SELF) | (1 << YAPLParser.LBRACKET) | (1 << YAPLParser.LPAR) | (1 << YAPLParser.NEGATION) | (1 << YAPLParser.OBJ_ID) | (1 << YAPLParser.INTEGER) | (1 << YAPLParser.STRING_LIT))) != 0):
                            self.state = 186
                            self.expr(0)
                            self.state = 191
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==YAPLParser.COMMA:
                                self.state = 187
                                self.match(YAPLParser.COMMA)
                                self.state = 188
                                self.expr(0)
                                self.state = 193
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 196
                        self.match(YAPLParser.RPAR)
                        pass

             
                self.state = 202
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def BOOL(self):
            return self.getToken(YAPLParser.BOOL, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def TYPE_ID(self):
            return self.getToken(YAPLParser.TYPE_ID, 0)

        def SELF_TYPE(self):
            return self.getToken(YAPLParser.SELF_TYPE, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_var_type

